Upgrade to zeppelin 0.6.5