@@ -1,36 +1,62 @@
-FROM mesosphere/zeppelin:0.6.0
+FROM gettyimages/spark:2.0.1-hadoop-2.7
 
 MAINTAINER jeffecu88@gmail.com
 
-RUN apt-get update && apt-get -y install curl
-
-RUN curl 'http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh' > Miniconda.sh
-RUN bash Miniconda.sh -p /miniconda -b
-RUN rm Miniconda.sh
-
-ENV PATH=/miniconda/bin:${PATH}
-RUN conda update -y conda
-RUN conda install -y \
-    matplotlib \
-    seaborn \
+# SciPy
+RUN set -ex \
+ && buildDeps=' \
+    libpython3-dev \
+    build-essential \
+    pkg-config \
+    gfortran \
+ ' \
+ && apt-get update && apt-get install -y --no-install-recommends \
+    $buildDeps \
+    ca-certificates \
+    wget \
+    liblapack-dev \
+    libopenblas-dev \
+ && packages=' \
     numpy \
-    scikit-learn \
-    bokeh \
-    pandas
+    pandasql \
+    scipy \
+ ' \
+ && pip3 install $packages \
+ && apt-get purge -y --auto-remove $buildDeps \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /opt/spark/lib
+# Zeppelin
+ENV ZEPPELIN_PORT 8080
+ENV ZEPPELIN_HOME /usr/zeppelin
+ENV ZEPPELIN_CONF_DIR $ZEPPELIN_HOME/conf
+ENV ZEPPELIN_NOTEBOOK_DIR $ZEPPELIN_HOME/notebook
+ENV ZEPPELIN_COMMIT 091086de9400dd1c02ca02acf4180b1bf1e9ede7
+RUN set -ex \
+ && buildDeps=' \
+    git \
+    bzip2 \
+ ' \
+ && apt-get update && apt-get install -y --no-install-recommends $buildDeps \
+ && curl -sL http://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz \
+   | gunzip \
+   | tar x -C /tmp/ \
+ && git clone https://github.com/apache/zeppelin.git /usr/src/zeppelin \
+ && cd /usr/src/zeppelin \
+ && git checkout -q $ZEPPELIN_COMMIT \
+ && dev/change_scala_version.sh "2.11" \
+ && MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=1024m" /tmp/apache-maven-3.3.9/bin/mvn --batch-mode package -DskipTests -Pscala-2.11 -Pbuild-distr \
+  -pl 'zeppelin-interpreter,zeppelin-zengine,zeppelin-display,spark-dependencies,spark,markdown,angular,shell,hbase,postgresql,jdbc,python,elasticsearch,zeppelin-web,zeppelin-server,zeppelin-distribution' \
+ && tar xvf /usr/src/zeppelin/zeppelin-distribution/target/zeppelin*.tar.gz -C /usr/ \
+ && mv /usr/zeppelin* $ZEPPELIN_HOME \
+ && mkdir -p $ZEPPELIN_HOME/logs \
+ && mkdir -p $ZEPPELIN_HOME/run \
+ && apt-get purge -y --auto-remove $buildDeps \
+ && rm -rf /var/lib/apt/lists/* \
+ && rm -rf /usr/src/zeppelin \
+ && rm -rf /root/.m2 \
+ && rm -rf /root/.npm \
+ && rm -rf /tmp/*
 
-# Redshift libs
-RUN curl https://s3.amazonaws.com/redshift-downloads/drivers/RedshiftJDBC41-1.1.10.1010.jar \
-  -o /opt/spark/lib/RedshiftJDBC41-1.1.10.1010.jar
-
-# S3A libraries
-RUN curl https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk/1.7.4/aws-java-sdk-1.7.4.jar \
-  -o /opt/spark/lib/aws-java-sdk-1.7.4.jar
-
-RUN curl http://central.maven.org/maven2/org/apache/hadoop/hadoop-aws/2.7.1/hadoop-aws-2.7.1.jar \
-  -o /opt/spark/lib/hadoop-aws-2.7.1.jar
-
-RUN mkdir -p /etc/hadoop/backup
-
-RUN mv /etc/hadoop/*-site.xml /etc/hadoop/backup
+WORKDIR $ZEPPELIN_HOME
+CMD ["bin/zeppelin.sh"]
